<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_product"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="13dp">

        <ImageView
            android:id="@+id/iv_product_img"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/sample1"
            android:background="@drawable/bg_trim"
            android:clipToOutline="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="100dp"
            app:layout_constrainedWidth="true"
            app:layout_constraintStart_toEndOf="@+id/iv_product_img"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/main_first_title1"
                android:textSize="16sp"
                android:maxLines="2"
                android:ellipsize="end"
                android:layout_marginTop="5dp"
                android:layout_marginStart="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/tv_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_first_address1"
                android:textSize="14sp"
                android:textColor="@color/gray"
                android:layout_marginTop="3dp"
                android:layout_marginStart="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_title"/>

            <TextView
                android:id="@+id/tv_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_price"
                android:textSize="17sp"
                android:textStyle="bold"
                android:layout_marginTop="3dp"
                android:layout_marginStart="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_address"/>

            <ImageView
                android:id="@+id/iv_chat"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:src="@drawable/ic_chat"
                android:layout_marginEnd="2dp"
                app:layout_constraintTop_toTopOf="@+id/tv_chat_number"
                app:layout_constraintBottom_toBottomOf="@+id/tv_chat_number"
                app:layout_constraintEnd_toStartOf="@+id/tv_chat_number"/>

            <TextView
                android:id="@+id/tv_chat_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_first_chatNum1"
                android:textSize="13sp"
                android:layout_marginEnd="8dp"
                app:layout_constraintTop_toTopOf="@+id/iv_like"
                app:layout_constraintBottom_toBottomOf="@+id/iv_like"
                app:layout_constraintEnd_toStartOf="@+id/iv_like"/>

            <ImageView
                android:id="@+id/iv_like"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:src="@drawable/ic_like"
                app:layout_constraintTop_toTopOf="@+id/tv_like_number"
                app:layout_constraintBottom_toBottomOf="@+id/tv_like_number"
                app:layout_constraintEnd_toStartOf="@+id/tv_like_number"/>

            <TextView
                android:id="@+id/tv_like_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_first_likeNum1"
                android:textSize="13sp"
                android:padding="1.5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>